--liquibase formatted sql

--changeset codex:auth-service-v1.0.0-create-auth-tables validCheckSum:ANY
CREATE TABLE IF NOT EXISTS roles
(
    id        BIGINT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    role_name VARCHAR(60) NOT NULL UNIQUE
);

CREATE TABLE IF NOT EXISTS users
(
    user_id          BIGINT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    full_name        VARCHAR(100),
    user_name        VARCHAR(100) NOT NULL UNIQUE,
    email            VARCHAR(50)  NOT NULL UNIQUE,
    password         VARCHAR(100),
    gender           VARCHAR(255) NOT NULL,
    phone_number     VARCHAR(11) UNIQUE,
    image_url        TEXT,
    keycloak_user_id VARCHAR(64)
);

CREATE UNIQUE INDEX IF NOT EXISTS uk_users_keycloak_user_id ON users (keycloak_user_id);

CREATE TABLE IF NOT EXISTS user_role
(
    user_id BIGINT NOT NULL,
    role_id BIGINT NOT NULL,
    CONSTRAINT pk_user_role PRIMARY KEY (user_id, role_id),
    CONSTRAINT fk_user_role_user FOREIGN KEY (user_id) REFERENCES users (user_id),
    CONSTRAINT fk_user_role_role FOREIGN KEY (role_id) REFERENCES roles (id)
);

INSERT INTO roles (id, role_name)
VALUES (1, 'USER')
ON CONFLICT (id) DO NOTHING;
INSERT INTO roles (id, role_name)
VALUES (2, 'PM')
ON CONFLICT (id) DO NOTHING;
INSERT INTO roles (id, role_name)
VALUES (3, 'ADMIN')
ON CONFLICT (id) DO NOTHING;

ALTER TABLE users
    ADD COLUMN IF NOT EXISTS keycloak_user_id VARCHAR(64);
CREATE UNIQUE INDEX IF NOT EXISTS uk_users_keycloak_user_id ON users (keycloak_user_id);
