@startuml

class User {

    @Id
    private Long id;

    private String fullname;

    private String username;

    private String email;

    @JsonIgnore
    private String password;

    private String gender;

    private String phone;

    private String avatar;

    private Set<Role> roles;

}

class user_role {

    private String user_id;

    private String role_id;

}


class Role {

    @Id
    private Long id;

    private RoleName name;

}


user_role --|> Role

user_role --|> User

@enduml